data/all_generated_tests/raw_wast_tests/block_TypeMismatchinControlFlowInstructions_2573.wast
;; 4. **Test Description**:    Use a `block` with an incorrect label index for a `br` instruction, targeting a result type that does not match the block's `blocktype`. Validate proper error identification and handling.    **Constraint**: Branching must respect the block type.    **Relation**: Tests conformance to branch type constraints.

(assert_invalid
  (module (func $invalid-block-branch (result i32)
    (block (result i32)
      (block (result i64) (br 1 (i32.const 0)))
      (i32.const 1)
    )
  ))
  "type mismatch"
)